--- a/public/styles.css
+++ b/public/styles.css
@@ -117,6 +117,8 @@ body {
     position: relative;
 }
 
+
+
 @media only screen and (max-width: 600px) {
     .nav-text1 {
         font-size: 14px;
@@ -140,7 +142,7 @@ body {
 .meme-image {
     width: 100vh;
     padding-top: 20px;
-    height: 600px;
+    height: 100vh;
     margin-left: 25px;
     position: absolute;
     padding-right: 50px;
